# TIPA

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  0_Method_implementation.ipynb  1_tipa_adapters.py  2_finetune_baseline.py  English_xnli.py  English_xnli_test.py  Experiments.ipynb  File_size.py  LICENSE  README.md  Results.ipynb  adapters.py  af_ner_eval.py  af_ner_val.py  check_datasets.py  clm_eval.py  cluster_submission_utils.py  cross_lingual_transfer.py  custom_copa.py  custom_copa_ft.py  custom_ner.py  custom_ner_ft.py  custom_qa.py  custom_qa_ft.py  custom_qa_v2.py  custom_sib.py  custom_sib_bert.py  custom_sib_ft.py  custom_submission_utils.py  custom_ud.py  custom_ud_ft.py  evaluation_adapters.py  get_datasets.py  hardcoded_run_mlm.py  hello.py  ner.py  pyproject.toml  qa_eval.py  (+21 more)
adapter_eval/: eval_dict.json  evaluation.py
adapters/: adapters.py  train_sbatch.sh
adaptersTest/: run_adapters.py  train_sbatch.sh
adapters_finetunings/: custom_copa.py  custom_copa_ft.py  custom_ner.py  custom_ner_ft.py  custom_qa.py  custom_qa_ft.py  custom_sib.py  custom_sib_bert.py  custom_sib_ft.py  custom_ud.py  custom_ud_ft.py
analysis/: 1_Training_regime.ipynb  2_Statistical_analysis.ipynb  2_Stats_unfinished.ipynb  3_distance_comparison.ipynb  4_comparison_other_papers.ipynb  5_adapter_extension.ipynb  6_Latex_tables_plots.ipynb  7_training_langs_overview.ipynb  8_Token_overlap.ipynb  9_Varia.ipynb  Token_overlap.ipynb  Typological_reconstruction_impact.ipynb  convergence.ipynb  distance_comparison.ipynb  subword_overlap.py  unseen_eval_analysis.ipynb
config/adapters/: clm.json  mlm.json
config/slurm/: debug-a100.yaml  debug-p100.yaml  genius-v100.yaml  wice-a100.yaml  wice-h100.yaml
docs/: quickstart-guide.md
eval_scores/approximation/: ace_ner_base.json  ace_ner_distVar.json  ace_ner_eu.json  ace_ner_extended.json  ace_ner_limit_5.json  ace_ner_sr.json  ace_ner_threshold_033.json  af_ner_base.json  af_ner_convergence.json  af_ner_eu.json  af_ner_extended.json  af_ner_sr.json  af_ner_threshold_033.json  af_pos_base.json  af_pos_eu.json  af_pos_extended.json  af_pos_sr.json  af_pos_threshold_033.json  aii_pos_threshold_033.json  ajp_pos_threshold_033.json  als_ner_base.json  als_ner_distVar.json  als_ner_eu.json  als_ner_extended.json  als_ner_limit_5.json  als_ner_sr.json  als_ner_threshold_033.json  am_ner_base.json  am_ner_convergence.json  am_ner_distVar.json  am_ner_eu.json  am_ner_extended.json  am_ner_limit_5.json  am_ner_sr.json  am_pos_base.json  (+1624 more)
extension_experiments/: quick_debug.py  run_mlm.py  run_unseen_lang_bert.py
lang-adapters-impact/: adapters-env.def  adapters.py  run.py  train_sbatch.sh
old_tests/: English_xnli_test.py  cross_lingual_transfer.py  hardcoded_run_mlm.py  hello.py  qa_eval.py  run_mlm_downloaded.py  run_unseen_copa.py  run_unseen_ner.py  run_unseen_ner_extended.py  run_unseen_ud_pos.py  stack_training.py
tests/: test_thing.py
trained_adapters/: README.md
(+2084 files in other folders)
