[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "master_thesis_adapters"
version = "0.1"
requires-python = ">= 3.11"
authors = [{ name = "Stef Accou", email = "stef.accou@gmail.com" }]
maintainers = [{ name = "Stef Accou", email = "stef.accou@gmail.com" }]
description = "A package to do the things we do in a thesis (master_thesis_adapters)."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "adapters",
    "transformers",
    "datasets",
    "numpy",
    "torch"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/stefaccou/Master_thesis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.ruff]
line-length = 120
