[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "TIPA"
version = "0.1"
requires-python = ">= 3.11"
authors = [{ name = "Stef Accou", email = "stef.accou@gmail.com" }]
maintainers = [{ name = "Stef Accou", email = "stef.accou@gmail.com" }]
description = "A package to showcase the Typologically Informed Parameter Aggregation (TIPA) framework."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "argparse",
    "adapters",
    "transformers",
    "datasets",
    "numpy",
    "torch"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/stefaccou/TIPA"

[py-modules] = ["unseen_eval", "cluster_submission_utils"]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.ruff]
line-length = 120
